# react-flask-crud-app

./: .env  .gitignore  README.md  app.py  database.db  init_db.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  run_tests.sh  schema.sql
db_handler/: db.py  init_db.py
flaskapp/: __init__.py  database.py  factories.py  models.py  routes.py
public/: index.html
src/: App.css  App.js
tests/: conftest.py  test_models.py  test_routes.py
